crates/seesaw/tests/compile_fail/event_enum_no_prefix.rs
use serde::{Serialize, Deserialize};

#[seesaw_core::event]
#[derive(Clone, Serialize, Deserialize)]
#[serde(tag = "type")]
pub enum BadEvent {
    VariantA,
    VariantB,
}

fn main() {}
